apps/api/base/api-register-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-register-dpl
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    spec:
      containers:
        - name: don-api-register
          image: don-api-register
          ports:
            - name: http
              containerPort: 1337
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 1
          livenessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 3
            periodSeconds: 5
