apps/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: apisix
          image: apache/apisix:3.11.0-debian
          ports:
            - name: http
              containerPort: 9080
            - name: https
              containerPort: 9443

          resources:
            requests:
              memory: 512Mi
              cpu: 1
            limits:
              memory: 2Gi
              cpu: 2

          livenessProbe:
            httpGet:
              path: /v1/healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /v1/healthcheck
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5

          volumeMounts:
            - name: data
              mountPath: /data
            - name: apisix-config
              mountPath: /usr/local/apisix/conf
              readOnly: true

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc
        - name: apisix-config
          configMap:
            name: apisix-config
