apps/api/base/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
        - name: etcd
          image: quay.io/coreos/etcd:v3.5.19
          ports:
            - containerPort: 2379
            - containerPort: 2380
          volumeMounts:
            - mountPath: /etcd-data
              name: etcd-data
      volumes:
        - name: etcd-data
          emptyDir: {}
