apps/api/base/register-site-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-site-svc
spec:
  ports:
    - port: 80
      targetPort: http
