apps/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9080
    - name: https
      port: 443
      targetPort: 9443
