apps/api/base/api-register-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-register-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-register-svc
                port:
                  number: 1337
  tls:
    - hosts:
        - set-in-overlay
      secretName: api-register-tls
