apps/api/base/register-site-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: register-site-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc
                port:
                  number: 80
  tls:
    - hosts:
        - set-in-overlay
      secretName: api-tls
